Added new project - Singleton. Updated readme file.

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 # Projects maven .iml files
 **/reader-writer-problem.iml
 **/producer-consumer-problem-simple.iml
+**/Singleton.iml
+
 
 
 # User-specific stuff:
